# WebStress-site

./: .gitignore  EXPERIMENT.md  EXPERIMENT_LOG.md  README.md  agent_llm.py  judge_llm.py  llm_client.py  llm_wrappers.py  orchestrator.py  proposer_llm.py  pyproject.toml  replay.py  run.sh  run_sim_wab.sh  run_webagentbench.sh  simulator_llm.py  viewer_streamlit.py
LLMOS/: run.sh
artifacts/: final_human_plan_validation_after_patch.md  final_human_plan_validation_after_patch.yaml  human_recording_plan_post_hardening_audit_v1.md  sample_human_task_preview.md
audit_reports/: _batches.json  w01.md  w05.md  w06.md  w07.md  w08_followup_negative_check_audit.md  w09.md  w10.md
benchmarks/: read_pkl.py  workarena.py
demo/: DEPLOY.md  Dockerfile  README.md
docs/: DEVELOPER_GUIDE.md  gpt5_lms_pp_trajectory_audit.md  patient_portal_degradation_audit.md  robinhood_task_logical_audit.md  webagentbench-design.md  worker_task_audit_prompt.md
instructions/: osworld_two_task.jsonl
llmos/: .gitignore  README.md  __init__.py  __main__.py  agent.py  cli.py  collect.py  config-demo.json  judge.py  main.py  pyproject.toml  runner.py  simulator.py
playground/: server.py
prompts/: action_space.agent.json  agent.system.txt  compiler.system.txt  feature_easy.json  feature_easy2.json  feature_hard.json  feature_hard2.json  feature_medium.json  judge.system.txt  proposer.system.txt  pure_simulator.diverse.system.txt  pure_simulator.system.txt  simulator.runtime.txt  simulator.system.txt
schema/: action.json  instruction.json
scripts/: .debug_lms_academic_probation_recovery.json  .debug_lms_academic_standing_optimization.json  .debug_lms_calculate_weighted_grade.json  .debug_lms_check_assignment_grade.json  .debug_lms_check_course_grade.json  .debug_lms_check_quiz_retake.json  .debug_lms_compare_late_policies.json  .debug_lms_complete_all_announcements.json  .debug_lms_complete_prerequisite_module.json  .debug_lms_comprehensive_discussion.json  .debug_lms_course_selection_next_semester.json  .debug_lms_cross_course_prerequisites.json  .debug_lms_discussion_participation_verify.json  .debug_lms_drop_course.json  .debug_lms_drop_lowest_letter_change.json  .debug_lms_exam_conflict.json  .debug_lms_find_missing_assignments.json  .debug_lms_find_next_deadline.json  .debug_lms_gpa_impact_analysis.json  .debug_lms_grade_with_curve.json  .debug_lms_grading_discrepancy.json  .debug_lms_identify_dropped_homework.json  .debug_lms_late_assignment_worth.json  .debug_lms_mark_all_announcements_read.json  .debug_lms_meet_discussion_minimums.json  .debug_lms_module_quiz_unlock.json  .debug_lms_multi_assignment_dependency.json  .debug_lms_peer_review_cycle.json  .debug_lms_peer_review_redo.json  .debug_lms_peer_review_with_feedback.json  (+101 more)
(+3647 files in other folders)
