[project]
name = "llmos-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # llmos dependencies
    "google-genai",
    "jsonschema>=4.25.1",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    # tinker-cookbook
    "tinker-cookbook",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv]
sources = { tinker-cookbook = { workspace = true } }
workspace = { members = ["tinker-cookbook"] }
