[project]
name = "llmos-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # llmos dependencies
    "faker==40.11.0",
    "google-genai",
    "jsonschema>=4.25.1",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    # tinker-cookbook
    "tinker-cookbook",
    # playground dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
sources = { tinker-cookbook = { workspace = true } }
workspace = { members = ["tinker-cookbook"] }
